# crm-web-api

./: CRM-WEB-API.postman_collection.json  CRM-WEB-API.postman_environment.json  Cargo.toml  README.md
common/: Cargo.toml
common/src/: container.rs  json.rs  lib.rs
crm/: Cargo.toml  build.rs
crm/conf/: local.toml
crm/protos/: token.proto
crm/sql/: core_schema_postgres.sql  initial-migration.sql
crm/src/: main.rs  routes.rs
crm/src/_macros/: mod.rs  support.rs
crm/src/api/: big_alloc.rs  build.rs  echo_header.rs  jemalloc.rs  management.rs  mod.rs  panic.rs  stats.rs  warp_helpers.rs
crm/src/api/auth/: account.rs  mod.rs  password.rs  sign_in.rs  token.rs
crm/src/api/auth/utils/: mod.rs  password.rs  policy.rs
crm/src/app/: cmdline.rs  config.rs  context.rs  init.rs  mod.rs  panic.rs  rejection.rs  runtime.rs  server.rs  tasks.rs  tracing.rs
crm/src/auth/: bearer_token.rs  filters.rs  mod.rs
crm/src/auth/rbac/: mod.rs  policy.rs  role.rs  token.rs
crm/src/db/: account.rs  mod.rs  pool.rs  stats.rs
crm/src/db/sql/: account__change-password.sql  account__create.sql  account__find-allowed-login-by-name.sql  account__get-by-id.sql  account__is-username-exist.sql  active_database_connection.sql  table_next_row_id.sql
crm/src/error/: error.rs  mod.rs  user_facing_error.rs
crm/src/protos/: token.rs
crm/src/routes/: filters.rs  request_info.rs
tokidator/: Cargo.toml
tokidator/src/: error.rs
tokidator/src/protos/: token.rs
tokidator/src/rbac/: role_set.rs  test_helpers.rs  traits.rs
