[package]
name = "common"
version = "0.0.1"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
num-bigint = "0.4.0"
num-traits = "0.2.14"
once_cell = "1.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[dev-dependencies]
rand = "0.8.4"
