[package]
name = "crm"
version = "0.1.0"
authors = ["Nui Narongwet <narongwet@beid.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.0.1" }
tokidator = { path = "../tokidator", version = "0.3.0" }

anyhow = "1.0.42"
backtrace = "0.3.61"
base64 = "0.13.0"
bcrypt = "0.10.1"
byte-unit = { version = "4.0.12", default-features = false, features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
ctrlc = { version = "3.2.0", features = ["termination"] }
futures = "0.3.16"
num-derive = "0.3.3"
num-traits = "0.2.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
openssl = { version = "0.10.35", features = ["vendored"] }
openssl-probe = "0.1.4"
protobuf = "2.25.0"
rand = "0.8.4"
regex = "1.5.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
structopt = "0.3.22"
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.26"
tikv-jemalloc-ctl = { version = "0.4.2", optional = true, features = ['use_std'] }
tikv-jemallocator = { version = "0.4.1", optional = true, features = ['unprefixed_malloc_on_supported_platforms'] }
tokio = { version = "1.10.0", features = ["full"] }
toml = "0.5.8"
tracing = { version = "0.1.26", features = ['attributes'] }
tracing-appender = "0.1.2"
tracing-subscriber = "0.2.19"
warp = "0.3.1"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = ["chrono", "json", "postgres", "runtime-tokio-native-tls"]

[build-dependencies]
protobuf-codegen-pure = "2.25.0"

[features]
jemalloc = ['tikv-jemallocator', 'tikv-jemalloc-ctl']
default = [
    # N.B. comment out jemalloc if you found dead lock. It happened with older version combine with actix
    'jemalloc'
]
